web-server/k8s/common/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: quay.io/cilium/alpine-curl:v1.10.0
        command: ["/bin/sh", "-c", "cp /scripts/check-global-services.sh /tmp && chmod +x /tmp/check-global-services.sh && /tmp/check-global-services.sh"]
        volumeMounts:
        - name: script-volume
          mountPath: /scripts
      volumes:
      - name: script-volume
        configMap:
          name: check-global-services
